# ags-manual

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGS-Editor-Plugins.html  ASCIIcodes.html  AdvancedRoomFeatures.html  AnonymousUsageInfo.html  AudioChannel.html  AudioClip.html  AudioInScript.html  AutonumberSpeechFiles.html  BackingUpYourGame.html  BlockingScripts.html  BuildAndroid.html  BuiltInEnums.html  Button.html  CONTRIBUTING.md  CallingGlobalFunctions.html  Camera.html  Character.html  ColoursEditor.html  Constants.html  ContactingTheDevelopers.html  Copyright.html  Credits.html  CustomDialogOptions.html  CustomProperties.html  CyclePalette.html  DateTime.html  Debuggingfeatures.html  DefaultSetup.html  Dialog.html  DialogOptions.html  DialogOptionsRenderingInfo.html  DialogScript.html  Dictionary.html  DisplayAt.html  DisplayFunctions.html  (+300 more)
.doctrees/: ASCIIcodes.doctree  AdvancedRoomFeatures.doctree  AnonymousUsageInfo.doctree  AudioChannel.doctree  AudioClip.doctree  AutonumberSpeechFiles.doctree  BackingUpYourGame.doctree  BlockingScripts.doctree  BuiltInEnums.doctree  Button.doctree  CallingGlobalFunctions.doctree  Character.doctree  ContactingTheDevelopers.doctree  Copyright.doctree  Credits.doctree  CustomDialogOptions.doctree  CustomProperties.doctree  DateTime.doctree  Debuggingfeatures.doctree  Dialog.doctree  DialogOptionsRenderingInfo.doctree  DisplayFunctions.doctree  DistGame.doctree  DrawingSurfaceFunctions.doctree  DynamicArrays.doctree  DynamicSprite.doctree  EditingGUIs.doctree  EditorCharacter.doctree  EditorInventoryItems.doctree  EditorRoom.doctree  EditorSprite.doctree  EditorView.doctree  EventTypes.doctree  ExtenderFunctions.doctree  FAQ.doctree  File.doctree  GUI.doctree  GUIControl.doctree  Game.doctree  Gamevariables.doctree  (+82 more)
.github/workflows/: Makefile  actions.m4  build.yml  job.m4  release.m4  release.yml  test.m4  test.yml
_extensions/: h2r.py
_sources/: ASCIIcodes.md.txt  AdvancedRoomFeatures.md.txt  AnonymousUsageInfo.md.txt  AudioChannel.md.txt  AudioClip.md.txt  AutonumberSpeechFiles.md.txt  BackingUpYourGame.md.txt  BlockingScripts.md.txt  BuiltInEnums.md.txt  Button.md.txt  CallingGlobalFunctions.md.txt  Character.md.txt  ContactingTheDevelopers.md.txt  Copyright.md.txt  Credits.md.txt  CustomDialogOptions.md.txt  CustomProperties.md.txt  CyclePalette.md.txt  DateTime.md.txt  Debuggingfeatures.md.txt  Dialog.md.txt  DialogOptionsRenderingInfo.md.txt  DisplayAt.md.txt  DisplayFunctions.md.txt  DistGame.md.txt  DrawingSurfaceFunctions.md.txt  DynamicArrays.md.txt  DynamicSprite.md.txt  EditingGUIs.md.txt  EditorCharacter.md.txt  EditorInventoryItems.md.txt  EditorRoom.md.txt  EditorSprite.md.txt  EditorView.md.txt  EventTypes.md.txt  ExtenderFunctions.md.txt  FAQ.md.txt  File.md.txt  GUI.md.txt  GUIControl.md.txt  (+89 more)
_static/: alabaster.css  custom.css  documentation_options.js
_templates/: extralinks.html  homelink.html  indexlink.html  layout.html  localtoc.html
css/: main.css
html/: template.html5  template.js  template_navigation.js
html/css/: main.css
html/js/: darkmode.js
htmlhelp/: template.hhc  template.hhp  template.html4
js/: navigation.js  search.js
lua/: agsman.lua  get_contents.lua  get_indices.lua  insert_anchors.lua  insert_toc.lua  metacheck.lua  rewrite_links.lua  set_title.lua  strip_blockquote.lua  strip_code.lua  strip_codeblock.lua  write_feature_check.lua  write_genindex.lua  write_hhc.lua  write_hhk.lua  write_hhp.lua  write_metablock.lua  write_metacheck.lua  write_metajs.lua  write_navigationjs.lua
m4/: AGS_PROG_PANDOC.m4
meta/: approved_links.txt
spell/dict/: files.aff  files.dic  geometry.aff  geometry.dic
spell/test/: files.txt  geometry.txt
sphinx-files/: clean-help-source.sh  get-help-source.sh
sphinx-files/_source/: index.rst
sphinx-files/source/: conf.py  index.rst
syntax/: ags.xml  agsdialog.xml
v3/: AdvancedRoomFeatures.html  AnonymousUsageInfo.html  AudioChannel.html  AudioClip.html  AudioInScript.html  AutonumberSpeechFiles.html  BackingUpYourGame.html  BlockingScripts.html  BuildAndroid.html  Button.html  Camera.html  Character.html  ColoursEditor.html  Constants.html  ContactingTheDevelopers.html  Copyright.html  Credits.html  CustomDialogOptions.html  CustomProperties.html  DateTime.html  Debuggingfeatures.html  DefaultSetup.html  Dialog.html  DialogOptions.html  DialogOptionsRenderingInfo.html  DialogScript.html  Dictionary.html  DistGame.html  DrawingSurface.html  DynamicArrays.html  DynamicSprite.html  EditorCharacter.html  EditorCommandLineOptions.html  EditorCursor.html  EditorDialog.html  EditorFont.html  EditorGUI.html  EditorInventoryItems.html  EditorLogPanel.html  EditorPlugins.html  (+141 more)
v3/js/: darkmode.js  navigation.js  search.js
v4/: AdvancedRoomFeatures.html  AnimatedOverlay.html  AnonymousUsageInfo.html  AudioChannel.html  AudioClip.html  AudioInScript.html  AutonumberSpeechFiles.html  BackingUpYourGame.html  BlockingScripts.html  BuildAndroid.html  Button.html  Camera.html  Character.html  ColoursEditor.html  Constants.html  ContactingTheDevelopers.html  Copyright.html  Credits.html  CustomDialogOptions.html  CustomProperties.html  DateTime.html  Debuggingfeatures.html  DefaultSetup.html  Dialog.html  DialogOptions.html  DialogOptionsRenderingInfo.html  DialogScript.html  Dictionary.html  DistGame.html  DrawingSurface.html  DynamicArrays.html  DynamicSprite.html  EditorCharacter.html  EditorCommandLineOptions.html  EditorCursor.html  EditorDialog.html  EditorFont.html  EditorGUI.html  EditorInventoryItems.html  EditorLogPanel.html  (+154 more)
v4/js/: navigation.js  search.js
